<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:src="@drawable/mainbefore"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="See What's next."
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_txt2"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_txt3"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/bt_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="한 달 무료 이용 신청"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:padding="3dp"
            android:paddingRight="15dp"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="115dp"
            android:background="#FF0000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_weight="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/main_footer1"
            android:textSize="13dp"
            android:textColor="#D5D5D5"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            />
        <LinearLayout
            android:id="@+id/help_center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="고객센터"
                    android:textColor="#D5D5D5"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="개인정보"
                    android:textColor="#D5D5D5"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="이용 약관"
                    android:textColor="#D5D5D5"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="쿠키 설정"
                    android:textColor="#D5D5D5"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/main_footer2"
            android:textSize="12dp"
            android:textColor="#D5D5D5"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/main_footer3"
            android:textSize="12dp"
            android:textColor="#D5D5D5"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
</LinearLayout>